--- a/source/RockawayWish.Web/Content/css/site.css
+++ b/source/RockawayWish.Web/Content/css/site.css
@@ -337,7 +337,10 @@ ul { list-style-type: none; }
     font-family: Roboto;
     background-image:url('/Content/images/pink-star.png');background-repeat:no-repeat;background-position:13px 14px;
     text-align: left;
-    padding-left: 50px;
+    padding-left: 45px;
+    width:auto; 
+    padding-right: 20px;
+    
 }
 
 #main-carousel .carousel-inner .item {
@@ -388,7 +391,7 @@ ul { list-style-type: none; }
 	/*font-family: roboto;*/
 	font-size: 55px;
 	font-weight: 800;
-	margin-bottom: 40px;
+	margin-bottom: 20px;
     text-shadow: 3px 3px #000;
 	text-transform: uppercase;
         font-family: Roboto;
@@ -405,7 +408,7 @@ ul { list-style-type: none; }
 	font-family: roboto;
 	font-size: 24px;
 	font-weight: 300;
-	margin-bottom: 59px;
+	margin-bottom: 30px;
 	margin-top: 0;
     text-shadow: 2px 2px #000;
 }
