--- a/source/RockawayWish.Web/Views/Home/About.cshtml
+++ b/source/RockawayWish.Web/Views/Home/About.cshtml
@@ -2,11 +2,78 @@
 <section id="about-us">
     <div class="container">
         <div class="text-center">
-            <div class="col-sm-8 col-sm-offset-2">
+            <div class="col-sm-12">
                 <h2 class="title-one">About Us</h2>
-                <p>Rockaway W.I.S.H. is a registered 501(c)(3) non-profit organization. Since 2006, our group of born & bred Rockawayites, has been at the forefront of local volunteer efforts, aiding our neighbors in times of need. On October 29, 2012, Hurricane Sandy decimated our home town, making our presence in the neighborhood more crucial than ever before. Our Mission, post Hurricane Sandy, is to provide monetary relief to victims during the recovery and rebuild phases of this disaster.</p>
+                <p style="text-align: left;">
+                    Rockaway W.I.S.H. (Women Inspired to Support &amp; Help) was formed in 2006, from a simple
+                    meeting amongst childhood friends looking to make a difference in the community. Our
+                    motivation stemmed from other local civic organizations, mainly The Graybeards (senior
+                    basketball league turned philanthropists) &amp; the R.I.B.S. ("Rockaway Irish Boys", who lost
+                    several friends on 9/11). After a few discussions and recruitment sessions, W.I.S.H. was up &amp;
+                    running. With an emphasis on causes affecting women &amp; children, our immediate efforts
+                    focused on school supply drives, holiday gift giving, and families battling illnesses. As our
+                    presence in the Rockaways became more established, both membership and fundraising
+                    quickly experienced substantial growth.
+                </p>
+                <p style="text-align: left;">
+                    Women are attracted to join W.I.S.H. because they have an innate desire to aid &amp; assist their
+                    neighbors in times of need, or they themselves have been a beneficiary of our good deeds. The
+                    group has become a beautiful, contagious, circle of giving that continues to attract new
+                    members, volunteers, and efforts each year.
+                </p>
+                <p style="text-align: left;">
+                    From 2006-2012, highlights of WISH include:
+                    <ul style=" text-align: left; list-style-type: disc">
+                        <li>
+                            Sponsorship &amp; coaching of local sports leagues (Rockaway Beach Basketball Summer
+                            Classic, Little League, Beach Volleyball)
+                        </li>
+                        <li>Treats with Santa – holiday gift giving event</li>
+                        <li>
+                            Mother's Day Flowers – delivered to moms of active duty military personnel, women who
+                            have lost children, women battling illness
+                        </li>
+                        <li>WISH Rocks – concert benefiting children afflicted with illnesses in the neighborhood</li>
+                        <li>
+                            School Supply and Baby Item Drives – enabling us to distribute these much needed
+                            items to families in need
+                        </li>
+                        <li>Financial assistance – for families going through difficult times</li>
+                    </ul>
+                </p>
+                <p style="text-align: left;">
+                    In 2012, Rockaway bore the brunt of Hurricane Sandy’s wrath. We were on the receiving end of
+                    donations from all over the country and quickly established a relief center to distribute supplies
+                    to hundreds of local families. After receiving a grant from the Robin Hood Foundation, W.I.S.H.
+                    effectively derived a system to distribute thousands of dollars amongst the community. The
+                    storm was a turning point for the group and is when we became an official 501c3 charitable
+                    organization.
+                </p>
+                <p style="text-align: left;">
+                    Sandy has long passed and we continue to refine and re-focus our efforts on new causes, while
+                    staying true to our root mission. Since 2012, W.I.S.H. is proud of our continued efforts to
+                    support the community through:
+                    <ul style=" text-align: left; list-style-type: disc">
+                        <li>Annual scholarship – monetary grant awarded to a member’s child, entering high school</li>
+                        <li>Shining Stars – weekend program for 8-12 year old girls, building self-confidence &amp; healthy habits</li>
+                        <li>Red, WISH, and Blue – annual Summer kick-off fundraiser</li>
+                        <li>Prom &amp; Communion Dress Drive – collecting dresses for underprivileged girls celebrating these milestones</li>
+                        <li>Catch a Cure – Fall 5K, honoring women who have lost their battle with cancer, &amp; those
+who continue to fight the deadly disease</li>
+                        <li>Ladies Who Brunch – annual Winter fundraiser, honoring local women for their community service</li>
+                        <li>WISHing – we recognized people in the neighborhood who are going the extra mile to
+help their neighbors</li>
+                    </ul>
+                </p>
+                <p style="text-align: left;">
+                    These are just a few of our initiatives and efforts W.I.S.H. has underway. As current events
+                    unfold (most recently Hurricanes Harvey &amp; Irma), we will react accordingly and keep our
+                    members aware of all donations &amp; platforms we assist.                
+                </p>
+                <p style="text-align: left;">Thank you for your continued support!</p>
             </div>
         </div>
+        <br /><br /><br />
         <div class="about-us">
             <div class="row">
                 <div class="text-center col-sm-12">
