--- a/source/RockawayWish.Web/Views/Shared/_HomeCarousel.cshtml
+++ b/source/RockawayWish.Web/Views/Shared/_HomeCarousel.cshtml
@@ -11,44 +11,46 @@
         <div class="carousel-inner" style="text-shadow: 4px 4px #000;">
 
 
-        <div class="item responsive-image active" style="background-image: url('@Url.Content("~/Content/images/slider/slide1.jpg")'); background-size: contain;">
-            <div class="carousel-caption" style="text-shadow: 2px 2px #000;">
-                <div>
-                    <h2 class="heading animated bounceInDown">WISH of Rockaway</h2>
-                    <br />
-                    <a class="btn btn-default slider-btn animated fadeIn" href="@Url.Content("~/about-wish")">Learn More</a>
+            <div class="item responsive-image active" style="background-image: url('@Url.Content("~/Content/images/slider/slide1.jpg")'); background-size: contain;">
+                <div class="carousel-caption" style="text-shadow: 2px 2px #000;">
+                    <div>
+                        <h2 class="heading animated bounceInDown">WISH of Rockaway</h2>
+                        <br />
+                        <a class="btn btn-default slider-btn animated fadeIn" href="@Url.Content("~/about-wish")">Learn More</a>
+                    </div>
                 </div>
             </div>
-        </div>
             <div class="item responsive-image" style="background-image: url('@Url.Content("~/Content/images/slider/slide2.jpg")')">
                 <div class="carousel-caption">
                     <div>
-                        @*<h2 class="heading animated bounceInDown" style="margin-bottom: 10px; color: #FF2A7F">Women</h2>*@
-                        <p class="animated bounceInUp" style="margin-bottom: 0px; color: #FF2A7F; font-size: 28px;">
-                            Click the link below to register<br />
-                            for the run and help local families<br />
-                            dealing with cancer.<br /><br />
+                        <h2 class="heading animated bounceInDown">Women</h2>
+                        <p class="animated bounceInUp">
+                            WISH would like to invite you to our annual Holiday event – Treats With Santa.
+                            <br />
+                            Click below for details.
+                            
                         </p>
-                        @*<p class="animated bounceInDown" style="margin-bottom: 14px">Here's a sneak peek at the raffle prizes.</p>*@
-                        <a class="btn btn-default slider-btn animated fadeIn" href="http://www.rockapulcorun.com" target="_blank">Catch a Cure</a>
+                        <a class="btn btn-default slider-btn animated fadeIn" href="@Url.Content("~/Content/pdf/slide2.pdf")" target="_blank">Treats With Santa</a>
                     </div>
                 </div>
-
             </div>
             <div class="item responsive-image" style="background-image: url('@Url.Content("~/Content/images/slider/slide3.jpg")')">
                 <div class="carousel-caption">
                     <div>
-                        <h2 class="heading animated bounceInDown">Inspired</h2><br />
-                        <p class="animated bounceInUp">Our 2016 Scholarship winner<br />
-                                Annie Burns and her mom.
-                            </p>
-</div>
+                        <h2 class="heading animated bounceInDown">Inspired</h2>
+                        <p class="animated bounceInUp">
+                            Click the link below to register<br />
+                            for the run and help local families<br />
+                            dealing with cancer.
+                        </p>
+                        <a class="btn btn-default slider-btn animated bounceInUp" href="http://www.rockapulcorun.com" target="_blank">Catch a Cure</a>
+                    </div>
                 </div>
             </div>
             <div class="item responsive-image" style="background-image: url('@Url.Content("~/Content/images/slider/slide4.jpg")')">
                 <div class="carousel-caption">
                     <div>
-                        <h2 class="heading animated bounceInRight">Support</h2><br />
+                        <h2 class="heading animated bounceInRight">Support</h2>
                         <p class="animated bounceInUp">WISH of Rockaway can use your support.</p>
                         <a class="btn btn-default slider-btn animated bounceInUp" href="@Url.Content("~/donate")">Donate</a>
                     </div>
@@ -57,9 +59,13 @@
             <div class="item responsive-image" style="background-image: url('@Url.Content("~/Content/images/slider/slide5.jpg")')">
                 <div class="carousel-caption">
                     <div>
-                        <h2 class="heading animated bounceInRight">Help</h2><br />
-                        <p class="animated bounceInUp">We are always looking for new members.</p>
-                        <p><a class="btn btn-default slider-btn animated bounceInUp" href="@Url.Content("~/register")">JOIN WISH</a></p>
+                        <h2 class="heading animated bounceInRight">Help</h2>
+                        <p class="animated bounceInUp">
+                            Our next General Meeting will be held Wednesday, October 18th.
+                            <br />New and current members are welcomed! 
+                            <br />Click the link for more information.
+                        </p>
+                        <a class="btn btn-default slider-btn animated bounceInUp" href="@Url.Content("~/Content/pdf/slide5.pdf")" target="_blank">Meeting Info</a>
                     </div>
                 </div>
             </div>
