--- a/source/RockawayWish.Web/Views/Shared/_HomeCarousel.cshtml
+++ b/source/RockawayWish.Web/Views/Shared/_HomeCarousel.cshtml
@@ -26,7 +26,7 @@
                         <h2 class="heading animated bounceInDown">Women</h2>
                         <p class="animated bounceInUp">
                             WISH would like to invite you to our annual Holiday event – Treats With Santa.
-                            <br />
+                            <br /><br />
                             Click below for details.
                             
                         </p>
@@ -39,8 +39,9 @@
                     <div>
                         <h2 class="heading animated bounceInDown">Inspired</h2>
                         <p class="animated bounceInUp">
-                            Click the link below to register<br />
-                            for the run and help local families<br />
+                            Click the link below
+                            to register for the run
+                            <br /> and help local families
                             dealing with cancer.
                         </p>
                         <a class="btn btn-default slider-btn animated bounceInUp" href="http://www.rockapulcorun.com" target="_blank">Catch a Cure</a>
@@ -61,11 +62,12 @@
                     <div>
                         <h2 class="heading animated bounceInRight">Help</h2>
                         <p class="animated bounceInUp">
-                            Our next General Meeting will be held Wednesday, October 18th.
-                            <br />New and current members are welcomed! 
-                            <br />Click the link for more information.
+                            Our next general meeting will be held on February 2, 2018
+                            at 7pm at the Belle Harbor Yacht Club.
+                            <br /><br />New and current members are welcome! 
+                            <br /><br />If you can't make the meeting you can click the link below to join.
                         </p>
-                        <a class="btn btn-default slider-btn animated bounceInUp" href="@Url.Content("~/Content/pdf/slide5.pdf")" target="_blank">Meeting Info</a>
+                        <a class="btn btn-default slider-btn animated bounceInUp" href="@Url.Content("~/register")">Join</a>
                     </div>
                 </div>
             </div>
