Update slide 2 in carousel

--- a/source/RockawayWish.Web/Views/Shared/_HomeCarousel.cshtml
+++ b/source/RockawayWish.Web/Views/Shared/_HomeCarousel.cshtml
@@ -25,12 +25,14 @@
                     <div>
                         <h2 class="heading animated bounceInDown">Women</h2>
                         <p class="animated bounceInUp">
-                            WISH would like to invite you to our annual Holiday event – Treats With Santa.
+                            Red, WISH, & Blue is Friday, May, 25th.<br />
+                            Tickets are still available for sale from any board member.
+
                             <br /><br />
-                            Click below for details.
+                            Click below for more info.
                             
                         </p>
-                        <a class="btn btn-default slider-btn animated fadeIn" href="@Url.Content("~/Content/pdf/slide2.pdf")" target="_blank">Treats With Santa</a>
+                        <a class="btn btn-default slider-btn animated fadeIn" href="@Url.Content("~/Content/pdf/slide2.pdf")" target="_blank">Blue Fundraiser</a>
                     </div>
                 </div>
             </div>
