Update slide 3 and 2 copy

--- a/source/RockawayWish.Web/Views/Shared/_HomeCarousel.cshtml
+++ b/source/RockawayWish.Web/Views/Shared/_HomeCarousel.cshtml
@@ -25,9 +25,9 @@
                     <div>
                         <h2 class="heading animated bounceInDown">Women</h2>
                         <p class="animated bounceInUp">
-                            Red, WISH, & Blue is Friday, May, 25th.<br />
+                            Red, WISH, & Blue is Friday, May, 25th.
+                            <br /><br />
                             Tickets are still available for sale from any board member.
-
                             <br /><br />
                             Click below for more info.
                             
@@ -41,12 +41,11 @@
                     <div>
                         <h2 class="heading animated bounceInDown">Inspired</h2>
                         <p class="animated bounceInUp">
-                            Click the link below
-                            to register for the run
-                            <br /> and help local families
-                            dealing with cancer.
+                            This year WISH honored Kathy Roberts, Margot McGinn, and Eileen Cuomo for all
+                            <br /> of the amazing things they do to support the Rockaway community.
+                            
                         </p>
-                        <a class="btn btn-default slider-btn animated bounceInUp" href="http://www.rockapulcorun.com" target="_blank">Catch a Cure</a>
+                        @*<a class="btn btn-default slider-btn animated bounceInUp" href="http://www.rockapulcorun.com" target="_blank">Catch a Cure</a>*@
                     </div>
                 </div>
             </div>
