Update slide 5 copy

--- a/source/RockawayWish.Web/Views/Shared/_HomeCarousel.cshtml
+++ b/source/RockawayWish.Web/Views/Shared/_HomeCarousel.cshtml
@@ -63,10 +63,9 @@
                     <div>
                         <h2 class="heading animated bounceInRight">Help</h2>
                         <p class="animated bounceInUp">
-                            Our next general meeting will be held on February 2, 2018
-                            at 7pm at the Belle Harbor Yacht Club.
-                            <br /><br />New and current members are welcome! 
-                            <br /><br />If you can't make the meeting you can click the link below to join.
+                            We are always looking for dedicated women who are looking to help the Rockaway community. 
+                            <br /><br />
+                            If you would like to join WISH, click the link below.
                         </p>
                         <a class="btn btn-default slider-btn animated bounceInUp" href="@Url.Content("~/register")">Join</a>
                     </div>
