--- a/source/RockawayWish.Web/Views/Shared/_HomeCarousel.cshtml
+++ b/source/RockawayWish.Web/Views/Shared/_HomeCarousel.cshtml
@@ -25,12 +25,14 @@
                     <div>
                         <h2 class="heading animated bounceInDown">Women</h2>
                         <p class="animated bounceInUp">
-                            WISH would like to invite you to our annual Holiday event – Treats With Santa.
+                            Red, WISH, & Blue is Friday, May, 25th.
                             <br /><br />
-                            Click below for details.
+                            Tickets are still available for sale from any board member.
+                            <br /><br />
+                            Click below for more info.
                             
                         </p>
-                        <a class="btn btn-default slider-btn animated fadeIn" href="@Url.Content("~/Content/pdf/slide2.pdf")" target="_blank">Treats With Santa</a>
+                        <a class="btn btn-default slider-btn animated fadeIn" href="@Url.Content("~/Content/pdf/slide2.pdf")" target="_blank">Blue Fundraiser</a>
                     </div>
                 </div>
             </div>
@@ -39,12 +41,11 @@
                     <div>
                         <h2 class="heading animated bounceInDown">Inspired</h2>
                         <p class="animated bounceInUp">
-                            Click the link below
-                            to register for the run
-                            <br /> and help local families
-                            dealing with cancer.
+                            This year WISH honored Kathy Roberts, Margot McGinn, and Eileen Cuomo for all
+                            <br /> of the amazing things they do to support the Rockaway community.
+                            
                         </p>
-                        <a class="btn btn-default slider-btn animated bounceInUp" href="http://www.rockapulcorun.com" target="_blank">Catch a Cure</a>
+                        @*<a class="btn btn-default slider-btn animated bounceInUp" href="http://www.rockapulcorun.com" target="_blank">Catch a Cure</a>*@
                     </div>
                 </div>
             </div>
@@ -62,10 +63,9 @@
                     <div>
                         <h2 class="heading animated bounceInRight">Help</h2>
                         <p class="animated bounceInUp">
-                            Our next general meeting will be held on February 2, 2018
-                            at 7pm at the Belle Harbor Yacht Club.
-                            <br /><br />New and current members are welcome! 
-                            <br /><br />If you can't make the meeting you can click the link below to join.
+                            We are always looking for dedicated women who are looking to help the Rockaway community. 
+                            <br /><br />
+                            If you would like to join WISH, click the link below.
                         </p>
                         <a class="btn btn-default slider-btn animated bounceInUp" href="@Url.Content("~/register")">Join</a>
                     </div>
