Added Captcha to register

--- a/source/RockawayWish.Web/Views/Account/Register.cshtml
+++ b/source/RockawayWish.Web/Views/Account/Register.cshtml
@@ -1,4 +1,6 @@
-﻿@model RockawayWish.Web.Models.RegisterViewModel
+﻿@using CaptchaMvc.HtmlHelpers
+@using CaptchaMvc;
+@model RockawayWish.Web.Models.RegisterViewModel
 @{
     ViewBag.Title = "Register";
 }
@@ -17,7 +19,7 @@
                         @Html.AntiForgeryToken()
                         <h4>We are always looking for motivated women who would like to do what they can to support and help the Rockaway community. If you would like to join WISH of Rockaway, please fill out the form below, we would love to have you!</h4>
                         <hr />
-                    
+
                         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
                         <div class="form-group">
                             @Html.LabelFor(m => m.FirstName, new { @class = "col-md-2 control-label" })
@@ -41,19 +43,19 @@
                             </div>
                         </div>
                         @*<div class="form-group">
-                            @Html.LabelFor(m => m.Password, new { @class = "col-md-2 control-label" })
-                            <div class="col-md-10">
-                                @Html.PasswordFor(m => m.Password, new { @class = "form-control" })
-                                @Html.ValidationMessageFor(m => m.Password, "", new { @class = "text-danger" })
-                            </div>
-                        </div>
-                        <div class="form-group">
-                            @Html.LabelFor(m => m.ConfirmPassword, new { @class = "col-md-2 control-label" })
-                            <div class="col-md-10">
-                                @Html.PasswordFor(m => m.ConfirmPassword, new { @class = "form-control" })
-                                @Html.ValidationMessageFor(m => m.ConfirmPassword, "", new { @class = "text-danger" })
-                            </div>
-                        </div>*@
+                    @Html.LabelFor(m => m.Password, new { @class = "col-md-2 control-label" })
+                    <div class="col-md-10">
+                        @Html.PasswordFor(m => m.Password, new { @class = "form-control" })
+                        @Html.ValidationMessageFor(m => m.Password, "", new { @class = "text-danger" })
+                    </div>
+                </div>
+                <div class="form-group">
+                    @Html.LabelFor(m => m.ConfirmPassword, new { @class = "col-md-2 control-label" })
+                    <div class="col-md-10">
+                        @Html.PasswordFor(m => m.ConfirmPassword, new { @class = "form-control" })
+                        @Html.ValidationMessageFor(m => m.ConfirmPassword, "", new { @class = "text-danger" })
+                    </div>
+                </div>*@
                         <div class="form-group">
                             @Html.LabelFor(model => model.Address, htmlAttributes: new { @class = "control-label col-md-2" })
                             <div class="col-md-10">
@@ -110,6 +112,9 @@
                             </div>
                         </div>
 
+                        <div class="form-group">
+                            @Html.MathCaptcha()
+                        </div>
                         <div class="form-group">
                             <div class="col-md-offset-2 col-md-10">
                                 <input type="submit" class="btn btn-default" value="Register" />
